<resources>
    <string name="app_name">MyApplication</string>
    <string name="loginButtonText">Login</string>
    <string name="usernameTitleText">Username</string>
    <string name="signInTitleText">Sign In</string>
    <string name="welcomeText">Welcome</string>
    <string name="sendDataButtonText">Send Data</string>
    <string name="leaderboardText">Leaderboard</string>
    <string name="profileText">Profile</string>
    <string name="not_applicable">N/A</string>
    <string name="select_route">Select Route</string>
    <string name="no_segments_message">No recorded routes with associated segments found. Try registering a route that contains a segment!</string>
    <string name="no_statistics">No statistics available</string>
    <string name="stats_card_activity_time">Activity Time</string>
    <string name="stats_card_elevation">Elevation</string>
    <string name="stats_card_average_speed">Average Speed</string>
    <string name="stats_card_total_distance">Total Distance</string>
    <string name="leaderboardTableRank">Rank</string>
    <string name="leaderboardTableUsername">Username</string>
    <string name="leaderboardTableTime">Time</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="no_statistics_text">No statistics available</string>
    <string name="back_button">Back Button</string>
    <string name="log_out">Log Out</string>
</resources>