<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="#817796"
    android:layout_margin="16dp"
    android:layout_marginEnd="8dp">

    <LinearLayout
        android:layout_width="309dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/gpx_clock"
                app:tint="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/stats_card_activity_time"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

        </LinearLayout>

        <!-- Time -->
        <TextView
            android:id="@+id/activityTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/not_applicable"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/gpx_climb"
                app:tint="#FFFFFF" />

            <TextView
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/stats_card_elevation"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

        </LinearLayout>

        <!-- Elevation -->
        <TextView
            android:id="@+id/elevationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/not_applicable"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/gpx_speedometer"
                app:tint="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/stats_card_average_speed"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

        </LinearLayout>

        <!-- Average Speed -->
        <TextView
            android:id="@+id/averageSpeedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/not_applicable"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/gpx_distance"
                app:tint="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/stats_card_total_distance"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

        </LinearLayout>

        <!-- Total Distance -->
        <TextView
            android:id="@+id/totalDistanceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/not_applicable"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
